--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
   "author": "Carlos Vera",
   "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
-    "pg": "^8.16.3",
-    "socket.io": "^4.8.1"
+    "@hapi/boom": "10.0.1",
+    "cors": "2.8.5",
+    "dotenv": "17.2.0",
+    "express": "5.1.0",
+    "jsonwebtoken": "9.0.2",
+    "pg": "8.16.3",
+    "socket.io": "4.8.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "3.1.10"
   }
 }
