--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:express-server": "nodemon apps/express-server/src/index.js"
+    "dev:express-server": "nodemon apps/express-server/src/index.js",
+    "dev:frontend": "cd apps/frontend && npm run dev"
   },
   "keywords": [
     "grpc",
@@ -25,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/boom": "10.0.1",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "2.8.5",
     "dotenv": "17.2.0",
