--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "author": "Carlos Vera",
   "license": "MIT",
   "dependencies": {
+    "@grpc/grpc-js": "1.13.4",
+    "@grpc/proto-loader": "0.7.15",
     "@hapi/boom": "10.0.1",
-    "bcrypt": "^6.0.0",
-    "cookie-parser": "^1.4.7",
+    "bcrypt": "6.0.0",
+    "cookie-parser": "1.4.7",
     "cors": "2.8.5",
     "dotenv": "17.2.0",
     "express": "5.1.0",
