--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "express": "5.1.0",
     "jsonwebtoken": "9.0.2",
     "pg": "8.16.3",
+    "react-router-dom": "^7.7.1",
     "socket.io": "4.8.1"
   },
   "devDependencies": {
