--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.84.1",
+    "formik": "^2.4.6",
     "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.7.1",
-    "tailwindcss": "^4.1.11"
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.11",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
