--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.84.1",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "lucide-react": "^0.536.0",
     "quill": "^2.0.3",
@@ -20,6 +21,8 @@
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "yup": "^1.7.0"
   },
