--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-SERVER_PORT=
+DB_CONNECTION_STRING=
 
+EXPRESS_SERVER_PORT=
+
+JWT_CURSOR_SECRET=
 JWT_ACCESS_TOKEN_SECRET=
 JWT_REFRESH_TOKEN_SECRET=
