--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.84.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "katex": "^0.16.22",
     "lucide-react": "^0.536.0",
     "quill": "^2.0.3",
     "react": "^19.1.0",
