refactor: update dependencies and configuration

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "dev:express-server": "nodemon apps/express-server/src/index.js",
     "dev:db-grpc": "nodemon apps/microservices/db_server",
     "dev:csv-grpc": "nodemon apps/microservices/csv_server",
-    "dev:pdf-grpc": "nodemon apps/microservices/pdf_server",
-    "dev:docx-grpc": "nodemon apps/microservices/docx_server",
-    "dev:html-grpc": "nodemon apps/microservices/html_server",
+    "dev:pdf-grpc": "nodemon apps/microservices/pdf_server/pdf_server.js",
+    "dev:docx-grpc": "nodemon apps/microservices/docx_server/docx_server.js",
+    "dev:html-grpc": "nodemon apps/microservices/html_server/html_server.js",
     "dev:xlsx-grpc": "nodemon apps/microservices/xlsx_server",
     "dev:greeter-grpc": "nodemon apps/microservices/greeter_server",
     "production:db-grpc": "node apps/microservices/db_server",
@@ -43,12 +43,18 @@
     "@grpc/proto-loader": "0.7.15",
     "@hapi/boom": "10.0.1",
     "bcrypt": "6.0.0",
+    "cheerio": "^1.1.2",
     "cookie-parser": "1.4.7",
     "cors": "2.8.5",
     "dotenv": "17.2.0",
     "express": "5.1.0",
+    "html-docx-js": "^0.3.1",
+    "html-to-pdfmake": "^2.5.31",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "9.0.2",
+    "pdfmake": "^0.2.20",
     "pg": "8.16.3",
+    "quill-delta-to-html": "^0.12.1",
     "react-router-dom": "^7.7.1",
     "socket.io": "4.8.1"
   },
